--- a/css/main.css
+++ b/css/main.css
@@ -17,9 +17,15 @@ h2
     text-align: center;
 }
 
-section
+h2 + p
 {
     text-align: center;
+}
+
+h2 + p + a
+{
+    text-align: center;
+    display: block;
 }
 
 img
