--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
     --uncgold: RGB(254,189,54);
     --uncgray: RGB(235,235,235);
 
-    background-color: var(--uncgray);
+    background-color: powderblue;
 }
 h1
 {
