--- a/css/main.css
+++ b/css/main.css
@@ -3,8 +3,10 @@
     --uncblue: RGB(1,45,91);
     --uncgold: RGB(254,189,54);
     --uncgray: RGB(235,235,235);
+    --prettypurple: RGB(219, 192, 250);
+    
 
-    background-color: powderblue;
+    background-color: var(--prettypurple);
 }
 h1
 {
