--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,11 @@ h2 + p + a
     text-align: center;
     display: block;
 }
+p
+{
+    font-family: courier;
+    color: RGB(25, 14, 43)
+}
 
 h3
 {
