--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -35,7 +35,14 @@ h1
 {
     color:azure;
     font-weight: bold;
-    font-size: 24pt;
+    font-size: 20pt;
+    list-style-type: none ;
+}
+.location
+{
+    font-weight: bold;
+    font-size: 20pt;
+    
 }
 .entry 
 {
