--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -50,7 +50,7 @@ h1
 }
 .entry 
 {
-    background-color:rgb(114, 34, 139);
+    background-color:cadetblue;
     color:beige;
     border: 5px solid goldenrod;
     margin-top: 50px;
